# agent-cli

./: ,env.example  .chat_history  .gitignore  README.md  cli_chat_interface.py  env.example  main.py  mock_chatbot.py  pyproject.toml  requirements.txt  storage.py
agents/: __init__.py  azure_ai_agent_service_agent.py  base_agent.py  mock_chatbot.py
agents/azure_agent_service/: __init__.py  azure_ai_agent_service_agent.py  config.py  message_processor.py  tools.py
notebooks/: agnet_service_creation.ipynb
