[project]
name = "agent-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "azure-ai-projects>=1.0.0b12",
    "azure-identity>=1.23.0",
    "click>=8.2.1",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
